# agv_simulation

./: CMakeLists.txt  package.xml
config/: nav2_params.yaml
launch/: just_checking_ymal_rewrite.launch.py  multi_robot_launch.launch.py  simulation_world.launch.py
launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  slam_launch.py
models/: pharmacist_dock.sdf  psr.sdf
src/: scan_merger_v2.cpp
urdf/: base.xacro
worlds/: test_world_new.sdf
